# docker-ros-qr-sim

./: README.md
qr_reader_cpp/: CMakeLists.txt  qr_reader_pyzbar.cpp
qr_reader_python/: qr_reader_opencv.py  qr_reader_pyzbar.py
qr_reader_ros_ws/: Dockerfile
qr_reader_ros_ws/scripts/: config.yaml  launch_full_task1.sh  launch_full_task2.sh  start_docker_task1.sh  start_docker_task2.sh  start_docker_test.sh
qr_reader_ros_ws/src/: instructions.md  launch_full_task1.sh  launch_full_task2.sh  start_docker_task1.sh  start_docker_task2.sh  stop.sh
qr_reader_ros_ws/src/gazebo_models_pkg/: CMakeLists.txt  my_world_host.launch
qr_reader_ros_ws/src/gazebo_models_pkg/include/: gazebo_moving_platform.h
qr_reader_ros_ws/src/gazebo_models_pkg/models/aruco_moving/: model.config  model.sdf
qr_reader_ros_ws/src/gazebo_models_pkg/models/aruco_pole/: model.config  model.sdf  model.sdf~
qr_reader_ros_ws/src/gazebo_models_pkg/models/aruco_pole/meshes/: aruco.dae  aruco.dae~  aruco1.dae~  test.dae
qr_reader_ros_ws/src/gazebo_models_pkg/models/asphalt_plane/: model-1_4.sdf  model-1_4.sdf~  model.sdf
qr_reader_ros_ws/src/gazebo_models_pkg/models/asphalt_plane/materials/scripts/: asphalt.material  asphalt.material~
qr_reader_ros_ws/src/gazebo_models_pkg/models/cam_high/: model.config  model.sdf
qr_reader_ros_ws/src/gazebo_models_pkg/models/cam_low/: model.config  model.sdf
qr_reader_ros_ws/src/gazebo_models_pkg/models/house/: model.sdf
qr_reader_ros_ws/src/gazebo_models_pkg/models/marker1/: model-1_4.sdf  model-1_5.sdf  model.sdf
qr_reader_ros_ws/src/gazebo_models_pkg/models/marker2/: model-1_4.sdf  model-1_5.sdf  model.sdf
qr_reader_ros_ws/src/gazebo_models_pkg/models/moving_platform_aruco/: model.config  model.sdf
qr_reader_ros_ws/src/gazebo_models_pkg/models/moving_platform_aruco/materials/scripts/: moving_platform.material
qr_reader_ros_ws/src/gazebo_models_pkg/models/moving_platform_aruco/meshes/: helipad.dae
qr_reader_ros_ws/src/gazebo_models_pkg/models/moving_platform_helipad/: model.sdf
qr_reader_ros_ws/src/gazebo_models_pkg/models/moving_platform_helipad/meshes/: helipad.dae
qr_reader_ros_ws/src/gazebo_models_pkg/src/: gazebo_moving_platform.cpp
qr_reader_ros_ws/src/gazebo_models_pkg/worlds/: moving_platform.urdf  qr_world.world
qr_reader_ros_ws/src/qr_detector_pkg/: CMakeLists.txt  package.xml
qr_reader_ros_ws/src/qr_detector_pkg/launch/: qr_detector.launch  qr_detector_cam.launch  qr_detector_cams.launch
qr_reader_ros_ws/src/qr_detector_pkg/src/: qr_detector cams.py  qr_detector.py  qr_detector_cam.py  qr_detector_cams.py
qr_reader_ros_ws/src/usb_cam/: instruction_camera_calibration.md  usb_cam.yaml
qr_reader_ros_ws/src/usb_cam/launch/: usb_cam-test.launch
qr_reader_ros_ws/src/web/web_video_server/launch/: web_video_server.launch
qr_reader_ros_ws/src/web/web_video_server/src/: web_video_server.cpp
